# ml-intern

./: README.md  pyproject.toml  test_mcp_connection.py
agent/: config.py  config_mcp_example copy.json  main.py
agent/context_manager/: manager.py
agent/core/: __init__.py  agent_loop.py  hf_router_catalog.py  llm_params.py  mcp_client.py  prompt_caching.py  session.py  telemetry.py  tools.py
agent/tools/: __init__.py  file_content_cache.py  github_find_examples.py  github_list_repos.py  github_read_file.py  github_search_code.py  jobs_tool.py  local_tools.py  private_hf_repo_tools.py  research_tool.py  sandbox_client.py  sandbox_tool.py  utils_tools.py
agent/utils/: particle_logo.py
backend/: dependencies.py  session_manager.py  user_quotas.py
backend/routes/: agent.py
configs/: frontend_agent_config.json
eval/: README.md  evaluate.py  leaderboard.py  run_eval_with_leaderboard.py
frontend/src/components/Chat/: ChatInput.tsx  ExpiredBanner.tsx  ToolCallGroup.tsx
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/hooks/: useAgentChat.ts  useUserQuota.ts
frontend/src/lib/: sse-chat-transport.ts
frontend/src/store/: agentStore.ts
